<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carbo">
    <RadioGroup
        android:id="@+id/rg_carbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toStartOf="@+id/rg_sug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_carbo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkNumButton" />

        <RadioButton
            android:id="@+id/rb_carbo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkNumButton" />

        <RadioButton
            android:id="@+id/rb_carbo_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkNumButton" />


        <RadioButton
            android:id="@+id/rb_carbo_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkNumButtonAll"
            android:text="@string/whatever" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_sug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rg_carbo"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_sug_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkNumButtonSecond" />

        <RadioButton
            android:id="@+id/rb_sug_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkNumButtonSecond" />

        <RadioButton
            android:id="@+id/rb_sug_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkNumButtonSecond" />

        <RadioButton
            android:id="@+id/rb_sug_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="checkNumButtonAll"
            android:text="@string/whatever" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_carbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/carbo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_carbo_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_carbo" />

    <Button
        android:id="@+id/btn_carbo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/view_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_carbo_next" />

    <Button
        android:id="@+id/btn_carbo_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_carbo_apply" />

</androidx.constraintlayout.widget.ConstraintLayout>